# waydroid-sensors

./: CMakeLists.txt  SensorFW.cpp  SensorFW.h  Sensors.cpp  Sensors.h  anbox-sensors.conf  hybrisbindertypes.h  service.cpp  waydroid-sensors.conf
debian/: changelog  control  copyright  rules
sensorfw-core/: CMakeLists.txt
sensorfw-core/include/datatypes/: genericdata.h  liddata.h  orientationdata.h  posedata.h  tapdata.h  timedunsigned.h  touchdata.h
sensorfw-core/include/plugins/: sensorfw_accelerometer_sensor.h  sensorfw_common.h  sensorfw_compass_sensor.h  sensorfw_gyroscope_sensor.h  sensorfw_humidity_sensor.h  sensorfw_lid_sensor.h  sensorfw_light_sensor.h  sensorfw_magnetometer_sensor.h  sensorfw_orientation_sensor.h  sensorfw_pressure_sensor.h  sensorfw_proximity_sensor.h  sensorfw_rotation_sensor.h  sensorfw_stepcounter_sensor.h  sensorfw_tap_sensor.h  sensorfw_temperature_sensor.h
sensorfw-core/include/utils/: dbus_connection_handle.h  event_loop.h  event_loop_handler_registration.h  handler_registration.h  socketreader.h
sensorfw-core/plugins/: sensorfw_accelerometer_sensor.cpp  sensorfw_common.cpp  sensorfw_compass_sensor.cpp  sensorfw_gyroscope_sensor.cpp  sensorfw_humidity_sensor.cpp  sensorfw_lid_sensor.cpp  sensorfw_light_sensor.cpp  sensorfw_magnetometer_sensor.cpp  sensorfw_orientation_sensor.cpp  sensorfw_pressure_sensor.cpp  sensorfw_proximity_sensor.cpp  sensorfw_rotation_sensor.cpp  sensorfw_stepcounter_sensor.cpp  sensorfw_tap_sensor.cpp  sensorfw_temperature_sensor.cpp
sensorfw-core/utils/: dbus_connection_handle.cpp  event_loop.cpp  handler_registration.cpp  socketreader.cpp
